class questions are done and fixed css overflow

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ main {
     flex-direction: column;
     text-align: center;
     vertical-align: center;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     background-color: orange;
     user-select: none;
