--- a/src/components/menus.css
+++ b/src/components/menus.css
@@ -44,7 +44,8 @@
     justify-content: flex-start;
     text-align: center;
     background-color: white;
-    height: 70vh;
+    min-height: 70vh;
+    max-height: 70vh;
     width: 90vw;
     border-radius: 1rem;
 }
